<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:dialogTitle="@string/pref_location_label"
        android:key="@string/pref_location_key"
        android:summary="@string/pref_location_summary"
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:title="@string/pref_location_label" />

    <ListPreference
        android:key="@string/pref_temperature_key"
        android:title="@string/title_list_preference"
        android:summary="@string/summary_list_preference"
        android:entries="@array/unit_entries_list_preference"
        android:entryValues="@array/unit_values_list_preference"
        android:dialogTitle="@string/dialog_title_list_preference" />


</PreferenceScreen>